# vpsproxy

./: .gitignore  CODEX_HANDOFF.md  README.md  SKILL.md
assets/vps-proxy-manager/: .env.example  README.md  alembic.ini  pyproject.toml
assets/vps-proxy-manager/codex-skills/vps-proxy-target-bootstrap/: SKILL.md
assets/vps-proxy-manager/codex-skills/vps-proxy-target-bootstrap/agents/: openai.yaml
assets/vps-proxy-manager/codex-skills/vps-proxy-task-diagnosis/: SKILL.md
assets/vps-proxy-manager/codex-skills/vps-proxy-task-diagnosis/agents/: openai.yaml
assets/vps-proxy-manager/docs/: ARCHITECTURE.md  DATA_BACKUP.md  DEPLOYMENT.md  RECOVERY.md  SECURITY.md  TELEGRAM.md  TROUBLESHOOTING.md
assets/vps-proxy-manager/migrations/: env.py
assets/vps-proxy-manager/migrations/versions/: 0001_initial.py  0002_separate_proxy_domains.py  0003_codex_diagnostics.py
assets/vps-proxy-manager/scripts/: emergency_restore.sh  install.sh  uninstall.sh  upgrade.sh
assets/vps-proxy-manager/src/vps_proxy_manager/: __init__.py  __main__.py  config.py  crypto.py  db.py  logging.py  models.py
assets/vps-proxy-manager/src/vps_proxy_manager/bot/: __init__.py  app.py  keyboards.py  security.py
assets/vps-proxy-manager/src/vps_proxy_manager/codex/: __init__.py  diagnosis_schema.json  worker.py
assets/vps-proxy-manager/src/vps_proxy_manager/proxy/: __init__.py  parser.py  ssrf.py  (+2 more)
assets/vps-proxy-manager/systemd/: vps-proxy-codex-worker.service  vps-proxy-manager.service
assets/vps-proxy-manager/tests/: test_bot_keyboards.py  test_codex_admission.py  test_migrations.py  test_parser.py  test_remote_payload.py  test_repository_domains.py  test_security.py  test_singbox.py  test_ssrf.py  test_task_runner.py
(+8 files in other folders)
